--- a/customer_segmentation.ipynb
+++ b/customer_segmentation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Customer Segmentation\n",
-    "The decision alternatives for this analysis are whether to expand in one of two locations or not to open at either location and look into other options. Only in the case that neither of the two locations are in line with Jae’s current customer base after analysis, we would choose the passive alternative. "
+    "The decision alternatives for this analysis are whether to expand in one of two locations or not to open at either location and look into other options. Only in the case that neither of the two locations are in line with the restaurant's current customer base after analysis, we would choose the passive alternative. "
    ]
   },
   {
